<resources>
    <string name="app_name">zashiotka</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">search</string>
    <string name="title_add">add</string>
    <string name="english">english :</string>
    <string name="informatics">informatics :</string>
    <string name="studnet_name">student name </string>
    <string name="student_id">student id </string>
    <string name="update">update</string>
    <string name="clear">clear</string>
    <string name="added">new zashiotka have been added</string>
    <string name="profile_photo">profile photo</string>
    <string name="error_save">can\'t add zashiotka</string>
    <string name="saved">new zashiotka have been added</string>
</resources>
