<?xml version="1.0" encoding="utf-8"?>
<com.example.zashiotka.views.AddStudentView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/profilePhotoET"
            android:layout_width="170dp"
            android:layout_height="200dp"/>

    <EditText
            android:id="@+id/studentNameET"
            android:hint="@string/studnet_name"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"/>

    <EditText
            android:id="@+id/studentIdET"
            android:hint="@string/student_id"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="number"/>

    <EditText
            android:id="@+id/englishET"
            android:text="@string/english"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"/>

    <EditText
            android:id="@+id/informaticsET"
            android:text="@string/informatics"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"/>

    <Button
            android:id="@+id/save"
            android:drawableTop="@drawable/ic_done_blue_24dp"
            android:layout_below="@+id/profilePhotoET"
            android:layout_marginLeft="50dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"/>

    <Button
            android:id="@+id/capture"
            android:drawableTop="@drawable/ic_photo_camera_blue_24dp"
            android:layout_below="@+id/profilePhotoET"
            android:layout_marginLeft="150dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"/>

    <Button
            android:id="@+id/insert"
            android:drawableTop="@drawable/ic_insert_photo_blue_24dp"
            android:layout_below="@+id/profilePhotoET"
            android:layout_marginLeft="250dp"
            android:layout_width="100dp"
            android:layout_height="50dp"/>


</com.example.zashiotka.views.AddStudentView>