<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/profilePhotoET"
            android:layout_width="150dp"
            android:layout_height="193dp" app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintVertical_bias="0.029"
            android:contentDescription="@string/profile_photo"/>

    <EditText
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/studentNameET"
            android:hint="@string/studnet_name"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPersonName" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/studentIdET"
            android:hint="@string/student_id"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="number" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill"/>

    <EditText
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/englishET"
            android:text="@string/english"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill,LabelFor"/>

    <EditText
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/informaticsET"
            android:text="@string/informatics"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill,LabelFor"/>

    <Button
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/saveitem"
            android:drawableTop="@drawable/ic_done_blue_24dp"
            android:layout_below="@+id/profilePhotoET"
            android:layout_marginLeft="50dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp" app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintVertical_bias="0.427"/>

    <Button
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/capture"
            android:drawableTop="@drawable/ic_photo_camera_blue_24dp"
            android:layout_below="@+id/profilePhotoET"
            android:layout_marginLeft="150dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintVertical_bias="0.427"/>

    <Button
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/insert"
            android:drawableTop="@drawable/ic_insert_photo_blue_24dp"
            android:layout_below="@+id/profilePhotoET"
            android:layout_marginLeft="250dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="250dp"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintVertical_bias="0.427"/>

</android.support.constraint.ConstraintLayout>